fix neoforge crash